--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         </activity>
         <activity android:name=".WelcomeActivity" />
         <activity android:name=".MapActivity" />
+        <activity
+            android:name=".MarkerDialogActivity"
+            android:parentActivityName=".MapActivity"
+            android:theme="@android:style/Theme.Holo.Dialog"/>
     </application>
 
 </manifest>
