--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,12 @@ dependencies {
 
     // Firebase Dependency
     implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
 
     // Google Maps Dependency
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
