--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
             android:name=".SignUpActivity"
             android:parentActivityName=".MainActivity"
             />
+        <activity
+            android:name=".ProfileEditActivity"
+            android:theme="@android:style/Theme.Holo.Dialog"/>
     </application>
 
 </manifest>
