WIP: Leaderboard Implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
             android:name=".MarkerDialogActivity"
             android:theme="@android:style/Theme.Holo.Dialog"
             />
+        <activity android:name=".LeaderBoardWasteActivity"/>
     </application>
 
 </manifest>
