--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,15 +23,21 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
-    // Firebase Dependency
+
+    // Firebase Dependencies
     implementation 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.google.firebase:firebase-database:11.8.0'
-    // Google Maps Dependency
+
+    // Google Maps Dependencies
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    //RecyclerView Dependency
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+
     compile 'com.google.firebase:firebase-core:11.8.0'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
