--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAUMU0wvDp7ymTH-b7GC3X2FDtHDHKZrKk"/>
+            android:value="@string/google_maps_api_key"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop">
